fix alignment issue

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -94,7 +94,7 @@
 
             @media (max-width: $breakpoint-mobile) { 
                 flex-direction: column;
-                justify-content: flex-start;
+                align-items: flex-start;
                 margin-left: -15px;
 
                 .copy-right-text {
